<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#333333">

    <!-- Название объекта -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <!-- Поля с информацией об объекте -->
    <TextView
        android:id="@+id/systemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_name"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_class"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/systemTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/stateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_class"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/temperatureTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_class"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/stateTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/classTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_class"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/typeTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/economyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/economy"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/classTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/ownerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:singleLine="false"
        android:ellipsize="none"
        app:layout_constraintTop_toBottomOf="@id/economyTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/corporationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/corporation"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:singleLine="false"
        android:ellipsize="none"
        app:layout_constraintTop_toBottomOf="@id/ownerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"/>

    <TextView
        android:id="@+id/capitalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capital"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/corporationTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"/>

    <!-- Поле для длинного текста с информацией -->
    <TextView
        android:id="@+id/informationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_information"
        android:textColor="#dddddd"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:maxLines="4"
        android:ellipsize="end"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/capitalTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Кнопка "Назад" -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="#ffffff"
        android:backgroundTint="#555555"
        android:layout_marginTop="-50dp"
        app:layout_constraintTop_toTopOf="@id/markerTypeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Тип метки -->
    <TextView
        android:id="@+id/markerTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_type"
        android:textColor="#dddddd"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>