<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent"> 
 
    <!-- Экран с кнопкой "Начать" -->

    <!-- Главное меню с двумя кнопками -->
    <RelativeLayout
        android:id="@+id/start_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_image"
        android:visibility="visible">

        <Button
            android:id="@+id/start_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@null"
            android:fontFamily="@font/xolonium"
            android:text="@string/start_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_image"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/milky_way_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:backgroundTint="@null"
            android:fontFamily="@font/xolonium"
            android:padding="13dp"
            android:text="@string/milky_way_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/magellan_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:backgroundTint="@null"
            android:fontFamily="@font/xolonium"
            android:padding="10dp"
            android:text="@string/magellan_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>
